--- a/sass/partials/_content.scss
+++ b/sass/partials/_content.scss
@@ -3,4 +3,64 @@
   min-height:600px;
   border:1px solid red;
   height:100%;
+
+  #sidebar{
+    @include span-columns(4);
+    height:600px;
+    display:inline-block;
+    .sidebarVid{
+      background-color:#2980b9;
+      padding:5px;
+      margin:3px;
+      width:100%;
+      height:80px;
+      color:$textColor;
+      position:relative;
+      a{
+        color:$textColor;
+        text-decoration: none;
+      }
+      img{
+        float:left;
+        margin-right:4px;
+      }
+      h3{
+        white-space: nowrap;
+        overflow: hidden;
+        text-overflow: ellipsis;
+        color:#2c3e50;
+        margin:0px;
+        padding:0px;
+        font-family: $ubuntuFont, arial, sans-serif;
+      }
+      .duration{
+        position:absolute;
+        left:72px;
+        bottom:10px;
+        font-size:11px;
+      }
+      .desc{
+        font-size:13px;
+      }
+      .category{
+        font-size: 10px;
+        position:absolute;
+        left:10px;
+        top:8px;
+        &:before{
+          content:"Category ";
+          font-size:10px;
+
+        }
+      }
+    }
+  }
+
+  #primaryArea{
+    @include span-columns(8);
+    height:600px;
+    padding-top:10px;
+    border:1px solid red;
+  }
 }
+
