--- a/css/libs/video-js.css
+++ b/css/libs/video-js.css
@@ -20,8 +20,8 @@ The control icons are from a custom font. Each icon corresponds to a character
 */
 @font-face {
   font-family: 'VideoJS';
-  src: url('font/vjs.eot');
-  src: url('font/vjs.eot?#iefix') format('embedded-opentype'), url('font/vjs.woff') format('woff'), url('font/vjs.ttf') format('truetype');
+  src: url('../../js/libs/video_js/font/vjs.eot');
+  src: url('../../js/libs/video_js/font/vjs.eot?#iefix') format('embedded-opentype'), url('../../js/libs/video_js/font/vjs.woff') format('woff'), url('../../js/libs/video_js/font/vjs.ttf') format('truetype');
   font-weight: normal;
   font-style: normal;
 }
