--- a/sass/partials/_content.scss
+++ b/sass/partials/_content.scss
@@ -1,7 +1,6 @@
 #content{
   @include outer-container;
   min-height:600px;
-  border:1px solid red;
   height:100%;
 
   #sidebar{
@@ -10,8 +9,8 @@
     display:inline-block;
     .sidebarVid{
       background-color:#2980b9;
-      padding:5px;
-      margin:3px;
+      padding: 0px 5px 5px 5px;
+      margin:6px;
       width:100%;
       height:80px;
       color:$textColor;
@@ -23,14 +22,16 @@
       img{
         float:left;
         margin-right:4px;
+        margin-top:4px;
       }
       h3{
+        background-color:$bodyBackground;
         white-space: nowrap;
         overflow: hidden;
         text-overflow: ellipsis;
-        color:#2c3e50;
-        margin:0px;
-        padding:0px;
+        color:black;
+        margin:0px 0px 0px 5px;
+        padding:5px;
         font-family: $ubuntuFont, arial, sans-serif;
       }
       .duration{
@@ -60,7 +61,11 @@
     @include span-columns(8);
     height:600px;
     padding-top:10px;
-    border:1px solid red;
+    -webkit-box-shadow: 6px 10px 10px 10px #DCDFE0;
+    box-shadow: 6px 10px 10px 10px #DCDFE0;
+    video{
+      background:black;
+    }
   }
 }
 
