--- a/css/libs/video-js.css
+++ b/css/libs/video-js.css
@@ -374,6 +374,10 @@ easily in the skin designer. http://designer.videojs.com/
   vertical-align: middle;
   cursor: pointer;
   opacity: 1;
+  left:50%;
+  margin-left:-70px;
+  top:50%;
+  margin-top:-65px;
   /* Need a slightly gray bg so it can be seen on black backgrounds */
   /* background-color-with-alpha */
   background-color: #07141e;
