--- a/sass/partials/_content.scss
+++ b/sass/partials/_content.scss
@@ -96,6 +96,90 @@
         content : "Category: "
       }
     }
-  }
+    #categoryDetail{
+      .categoryDetailVid{
+        background-color:#2980b9;
+        padding: 0px 5px 5px 5px;
+        margin:6px;
+        width:100%;
+        height:180px;
+        color:$textColor;
+        position:relative;
+        a{
+          color:$textColor;
+          text-decoration: none;
+        }
+        img{
+          float:left;
+          margin-right:4px;
+          margin-top:4px;
+        }
+        h3{
+          background-color:$bodyBackground;
+          white-space: nowrap;
+          overflow: hidden;
+          text-overflow: ellipsis;
+          color:black;
+          margin:0px 0px 0px 5px;
+          padding:5px;
+          font-family: $ubuntuFont, arial, sans-serif;
+
+        }
+        .duration{
+          position:absolute;
+          left:72px;
+          bottom:10px;
+          font-size:11px;
+        }
+        .desc{
+          font-size:13px;
+          font-family: $metaFont, arial, sans-serif;
+          color:$textColor;
+          padding:10px;
+        }
+        .category{
+          font-size: 10px;
+          position:absolute;
+          left:10px;
+          top:8px;
+          &:before{
+            content:"";
+            font-size:10px;
+
+          }
+        }
+      }//categoryDetailVid end
+    }
+    #categoryList{
+      h3{
+        font-family: $metaFont, arial, sans-serif;
+        margin-left:10px;
+      }
+      #list{
+        a{
+          display:block;
+          color:$textColor;
+          font-family: $metaFont, arial, sans-serif;
+          height:30px;
+          width:550px;
+          background-color: #3498db;
+          border-radius:8px;
+          padding:1px 0px 0px 4px;
+          margin:6px auto 6px auto;
+          text-align:center;
+          font-size:18px;
+          text-decoration: none;
+          &:hover{
+            background-color: #34495e;
+            -webkit-transition: background-color 500ms linear;
+            -moz-transition: background-color 500ms linear;
+            -o-transition: background-color 500ms linear;
+            -ms-transition: background-color 500ms linear;
+            transition: background-color 500ms linear;
+          }
+        }
+      }
+    }//categoryList end
+  }//primary end
 }
 
