--- a/sass/partials/_nav.scss
+++ b/sass/partials/_nav.scss
@@ -7,7 +7,7 @@ nav {
   vertical-align: baseline;
   width:100%;
   height:40px;
-
+  padding-right:200px;
   #title {
     float:left;
     color:$textColor;
@@ -30,6 +30,15 @@ nav {
     margin:0px 5px 0px 5px;
     float:right;
     height:inherit;
+
+    a{
+      color:$textColor;
+      font-size:24px;
+      font-family:$metaFont, arial, sans-serif;
+      font-weight:700;
+      line-height:45px;
+      text-decoration: none;
+    }
 
     &:last-child{
       margin-right:5px;
