--- a/sass/partials/_content.scss
+++ b/sass/partials/_content.scss
@@ -44,6 +44,11 @@
       .desc{
         font-size:13px;
         font-family: $metaFont, arial, sans-serif;
+        white-space: pre-line;
+        overflow: hidden;
+        text-overflow: ellipsis;
+        height:45px;
+        display:block;
       }
       .category{
         font-size: 10px;
